[project]
name = "datadog_log_monitor_reporter"
version = "0.1.0"
description = "datadog_log_monitor_reporter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,file-processing,litellm,tools]>=1.15.5,<2.0.0",
    "jambo",
]

[project.scripts]
datadog_log_monitor_reporter = "datadog_log_monitor_reporter.main:run"
run_crew = "datadog_log_monitor_reporter.main:run"
train = "datadog_log_monitor_reporter.main:train"
replay = "datadog_log_monitor_reporter.main:replay"
test = "datadog_log_monitor_reporter.main:test"
run_with_trigger = "datadog_log_monitor_reporter.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
